--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 
              </div>
         </section>
-        <img src="./assets/Edilson.jpg" alt="Desenvolvedora">
+        <img src="./assets/Edilson.jpg" alt="Desenvolvedor">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Edilson F. Rodrigues.</p>
