--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
             
             
         </section>
-        <img src="./assets/Edilson.jpg" alt="Desenvolvedor">
+        <img src="./assets/edilson.jpg" alt="Desenvolvedor">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Edilson F. Rodrigues.</p>
